--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,15 @@
             android:theme="@style/AppTheme">
         <activity
                 android:name=".login.LoginActivity"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".home.HomeActivity">
         </activity>
     </application>
 
