adding the syncadapter framework and updating dbhelper

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,43 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <service
+                android:name="com.chattree.chattree.datasync.AuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+            <meta-data
+                    android:name="android.accounts.AccountAuthenticator"
+                    android:resource="@xml/authenticator" />
+        </service>
+
+        <provider
+                android:name="com.chattree.chattree.datasync.AppContentProvider"
+                android:authorities="com.chattree.chattree.provider"
+                android:exported="false"
+                android:syncable="true"/>
+
+        <uses-permission
+                android:name="android.permission.INTERNET"/>
+        <uses-permission
+                android:name="android.permission.READ_SYNC_SETTINGS"/>
+        <uses-permission
+                android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+        <uses-permission
+                android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
+        <service
+                android:name="com.chattree.chattree.datasync.SyncService"
+                android:exported="true"
+                android:process=":sync">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter"/>
+            </intent-filter>
+            <meta-data android:name="android.content.SyncAdapter"
+                       android:resource="@xml/syncadapter" />
+        </service>
+
     </application>
 
 </manifest>
