Force the portrait screen orientation on activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity
                 android:name=".login.LoginActivity"
                 android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:configChanges="orientation|keyboardHidden"
                 android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -28,7 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".home.HomeActivity">
+        <activity android:name=".home.HomeActivity"
+                  android:screenOrientation="portrait"
+                  android:configChanges="orientation|keyboardHidden">
         </activity>
     </application>
 
