--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <!-- Sync permissions -->
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -50,15 +55,6 @@
                 android:authorities="com.chattree.chattree.provider"
                 android:exported="false"
                 android:syncable="true"/>
-
-        <uses-permission
-                android:name="android.permission.INTERNET"/>
-        <uses-permission
-                android:name="android.permission.READ_SYNC_SETTINGS"/>
-        <uses-permission
-                android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-        <uses-permission
-                android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
         <service
                 android:name="com.chattree.chattree.datasync.SyncService"
