Add basics for the websocket implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
                 android:screenOrientation="portrait"
                 android:parentActivityName=".home.HomeActivity">
         </activity>
+
+        <!-- WEBSOCKET SERVICE -->
+        <service android:name=".websocket.UpdaterService" />
     </application>
 
 </manifest>
