--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -30,12 +30,12 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.bmelnychuk:atv:1.2.+'
     testCompile 'junit:junit:4.12'
-    compile "android.arch.persistence.room:runtime:1.0.0"
+    compile 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    testCompile "android.arch.persistence.room:testing:1.0.0"
-    compile "android.arch.persistence.room:rxjava2:1.0.0"
+    testCompile 'android.arch.persistence.room:testing:1.0.0'
+    compile 'android.arch.persistence.room:rxjava2:1.0.0'
     compile 'com.github.johnkil.print:print:1.3.1'
-    compile('io.socket:socket.io-client:1.0.0') {
+    compile('io.socket:socket.io-client:0.9.0') {
         exclude group: 'org.json', module: 'json'
     }
 }
