--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /captures
 .externalNativeBuild
 /gradle/wrapper/gradle-wrapper.properties
+/gradlew
+/gradlew.bat
+/gradle/wrapper/gradle-wrapper.jar
