Improve messages writing layout behaviour
- Replace adjustPan to adjustResize in manifest (windowSoftInputMode)
- Scroll automatically on writing (transcriptMode)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
                 android:configChanges="orientation|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:parentActivityName=".home.HomeActivity"
-                android:windowSoftInputMode="adjustPan">
+                android:windowSoftInputMode="adjustResize">
         </activity>
 
         <service
