Clean and fix some thread detail functions + prepare ws for messages writing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,8 @@
         </service>
 
         <!-- WEBSOCKET SERVICE -->
-        <service android:name=".websocket.UpdaterService"/>
+        <service android:name=".websocket.WebSocketService"
+                 android:exported="false"/>
 
     </application>
 
