--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile('io.socket:socket.io-client:0.9.0') {
         exclude group: 'org.json', module: 'json'
     }
+    compile 'org.apache.commons:commons-collections4:4.1'
 }
