--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile('io.socket:socket.io-client:0.9.0') {
+        exclude group: 'org.json', module: 'json'
+    }
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.bmelnychuk:atv:1.2.+'
-    testCompile 'junit:junit:4.12'
     compile 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    testCompile 'android.arch.persistence.room:testing:1.0.0'
     compile 'android.arch.persistence.room:rxjava2:1.0.0'
     compile 'com.github.johnkil.print:print:1.3.1'
-    compile('io.socket:socket.io-client:0.9.0') {
-        exclude group: 'org.json', module: 'json'
-    }
     compile 'org.apache.commons:commons-collections4:4.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'android.arch.persistence.room:testing:1.0.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
 }
