--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,97 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.chattree.chattree">
+          package="com.chattree.chattree">
 
     <!-- To auto-complete the email thread field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.READ_PROFILE"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <!-- Network permissions -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <!-- location permission -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <!-- Sync permissions -->
-    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
-    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
-        android:name=".ChatTreeApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+            android:name=".ChatTreeApplication"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
 
         <!-- LOGIN ACTIVITY -->
         <activity
-            android:name=".login.LoginActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:label="@string/app_name"
-            android:noHistory="true"
-            android:screenOrientation="portrait">
+                android:name=".login.LoginActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:label="@string/app_name"
+                android:noHistory="true"
+                android:screenOrientation="portrait">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
         <!-- HOME ACTIVITY -->
         <activity
-            android:name=".home.HomeActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait"></activity>
+                android:name=".home.HomeActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:screenOrientation="portrait"/>
 
         <!-- PROFILE ACTIVITY -->
-        <activity android:name=".profile.ProfileActivity" />
+        <activity android:name=".profile.ProfileActivity"/>
 
         <!-- CONVERSATION ACTIVITY -->
         <activity
-            android:name=".home.conversation.ConversationActivity"
-            android:configChanges="orientation|keyboardHidden"
-            android:parentActivityName=".home.HomeActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"></activity>
+                android:name=".home.conversation.ConversationActivity"
+                android:configChanges="orientation|keyboardHidden"
+                android:parentActivityName=".home.HomeActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize"/>
 
         <service android:name=".datasync.AuthenticatorService">
             <intent-filter>
-                <action android:name="android.accounts.AccountAuthenticator" />
+                <action android:name="android.accounts.AccountAuthenticator"/>
             </intent-filter>
 
             <meta-data
-                android:name="android.accounts.AccountAuthenticator"
-                android:resource="@xml/authenticator" />
+                    android:name="android.accounts.AccountAuthenticator"
+                    android:resource="@xml/authenticator"/>
         </service>
 
         <provider
-            android:name=".datasync.AppContentProvider"
-            android:authorities="com.chattree.chattree.provider"
-            android:exported="false"
-            android:syncable="true" />
+                android:name=".datasync.AppContentProvider"
+                android:authorities="com.chattree.chattree.provider"
+                android:exported="false"
+                android:syncable="true"/>
 
         <service
-            android:name=".datasync.SyncService"
-            android:exported="true">
+                android:name=".datasync.SyncService"
+                android:exported="true">
             <intent-filter>
-                <action android:name="android.content.SyncAdapter" />
+                <action android:name="android.content.SyncAdapter"/>
             </intent-filter>
 
             <meta-data
-                android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter" />
+                    android:name="android.content.SyncAdapter"
+                    android:resource="@xml/syncadapter"/>
         </service>
 
         <!-- WEBSOCKET SERVICE -->
         <service
-            android:name=".websocket.WebSocketService"
-            android:exported="false" />
+                android:name=".websocket.WebSocketService"
+                android:exported="false"/>
 
-        <activity android:name=".home.ContactListChekActivity"></activity>
+        <activity android:name=".home.ContactListCheckActivity"/>
     </application>
 
 </manifest>
